--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> ISO 3103  <meta charset="UTF-8"> </head>
-    <body>  </body>
+    <head> 
+        <title>ISO 3103</title>  
+        <meta charset="UTF-8"> 
+    </head>
+    <body>  
+    </body>
 </html>
