Dodaj formule in sklicevanje

--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -9,7 +9,7 @@
 
 The content of this page has been slightly adapted from the Wikipedia page on <a href https://en.wikipedia.org/wiki/ISO_3103>ISO 3103</a>
 
-<p>ISO 3103 is a standard published by the International Organization for Standardization (commonly referred to as ISO), specifying a standardized method for brewing tea, possibly sampled by the standardized methods described in ISO 1839. It was originally laid down in 1980 as BS 6008:1980 by the British Standards Institution, and a revision was published in December, 2019 as ISO/NP 3103. It was produced by ISO Technical Committee 34 (Food products), Sub-Committee 8 (Tea).</p>
+<p><strong>Iso 3103</strong> is a standard published by the International Organization for Standardization (commonly referred to as ISO), specifying a standardized method for brewing tea, possibly sampled by the standardized methods described in ISO 1839. It was originally laid down in 1980 as BS 6008:1980 by the British Standards Institution, and a revision was published in December, 2019 as ISO/NP 3103. It was produced by ISO Technical Committee 34 (Food products), Sub-Committee 8 (Tea).</p>
 
 <p>The abstract states the following:</p>
 
@@ -23,16 +23,16 @@ The content of this page has been slightly adapted from the Wikipedia page on <a
 
 <ol>
     <li>
-        <h2>Details</h2>
+        <h2 id="details">Details</h2>
     </li>
     <li>
-        <h2>Pot and bowl</h2>
+        <h2 id="pot and bowl">Pot and bowl</h2>
     </li>
     <li>
-        <h2>Criticism</h2>
+        <h2 id="criticism">Criticism</h2>
     </li>
     <li>
-        <h2>Competing standards</h2>
+        <h2 id="competing standards">Competing standards</h2>
     </li>
     <li>See also</li>
     <li>References</li>
@@ -81,7 +81,7 @@ The content of this page has been slightly adapted from the Wikipedia page on <a
     <li>If milk is added after the pouring of tea, the standard notes that best results are obtained when the liquid is between 65-80 °C.</li>
     
     <li>5 ml of milk for the large bowl, or 2.5 ml for the small bowl, is used.</li>
-</ui>
+</ul>
 
 
 <h2>Pot and bowl</h2>
