Dodaj formule in sklicevanje

--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -3,6 +3,7 @@
     <head> 
         <title>ISO 3103</title>  
         <meta charset="UTF-8"> 
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
     </head>
     <body> 
         <h1>ISO 3103</h1>
@@ -19,25 +20,27 @@ The content of this page has been slightly adapted from the Wikipedia page on <a
 
 <p>The work was the winner of the parodic Ig Nobel Prize for Literature in 1999.</p>
 
-<h3>Contents</h3
+<h3>Contents</h3>
 
 <ol>
-    <li>
-        <h2 id="details">Details</h2>
-    </li>
-    <li>
-        <h2 id="pot and bowl">Pot and bowl</h2>
-    </li>
-    <li>
-        <h2 id="criticism">Criticism</h2>
-    </li>
-    <li>
-        <h2 id="competing standards">Competing standards</h2>
-    </li>
-    <li>See also</li>
-    <li>References</li>
-    <li>External links</li>
+    
+        <li>
+            <h2 id="details">Details</h2>
+        </li>
+        <li>
+            <h2 id="pot and bowl">Pot and bowl</h2>
+        </li>
+        <li>
+            <h2 id="criticism">Criticism</h2>
+        </li>
+        <li>
+            <h2 id="competing standards">Competing standards</h2>
+        </li>
+        <li>See also</li>
+        <li>References</li>
+        <li>External links</li>
 </ol>
+
 
 
 <h2>Details</h2>
@@ -97,5 +100,6 @@ The content of this page has been slightly adapted from the Wikipedia page on <a
 <h2>Competing standards</h2>
 
 <p>In 2003, the Royal Society of Chemistry published a press release entitled "How to make a Perfect Cup of Tea".</p>
+\[x = \frac{-b \pm \sqrt{b^2-4ac}}{2a}\]
     </body>
 </html>
