Dodaj formule in sklicevanje

--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -25,16 +25,16 @@ The content of this page has been slightly adapted from the Wikipedia page on <a
 <ol>
     
         <li>
-            <h2 id="details">Details</h2>
+            Details
         </li>
         <li>
-            <h2 id="pot and bowl">Pot and bowl</h2>
+            Pot and bowl
         </li>
         <li>
-            <h2 id="criticism">Criticism</h2>
+            Criticism
         </li>
         <li>
-            <h2 id="competing standards">Competing standards</h2>
+            Competing standards
         </li>
         <li>See also</li>
         <li>References</li>
@@ -43,7 +43,7 @@ The content of this page has been slightly adapted from the Wikipedia page on <a
 
 
 
-<h2>Details</h2>
+<h2 id="details">Details</h2>
 
 <img src "tea-bowl.jpg" alt "A white porcelain tea bowl exhibit in the Montreal Museum of Fine Arts" width "300" height "200">
     <p>To maintain consistent results, the following are recommendations given by the standard:</p>
@@ -87,17 +87,17 @@ The content of this page has been slightly adapted from the Wikipedia page on <a
 </ul>
 
 
-<h2>Pot and bowl</h2>
+<h2 id="pot and bowl">Pot and bowl</h2>
 
 <p>An annex of the standard describes two alternative pots (310 ml and 150 ml) and corresponding bowls (380 ml and 200 ml) "which are in widespread use" for tea tasting, including engineering drawings of their cross sections. The type of pot described is also known as a taster's mug.</p>
 
 
-<h2>Criticism</h2>
+<h2 id="criticism">Criticism</h2>
 
 <p>The protocol has been criticized for omitting any mention of prewarming the pot. Ireland was the only country to object, and objected on technical grounds.</p>
 
 
-<h2>Competing standards</h2>
+<h2 id="competing standards">Competing standards</h2>
 
 <p>In 2003, the Royal Society of Chemistry published a press release entitled "How to make a Perfect Cup of Tea".</p>
 \[x = \frac{-b \pm \sqrt{b^2-4ac}}{2a}\]
