Dodaj formule in sklicevanje

--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -45,7 +45,7 @@ The content of this page has been slightly adapted from the Wikipedia page on <a
 
 <h2 id="details">Details</h2>
 
-<img src "tea-bowl.jpg" alt "A white porcelain tea bowl exhibit in the Montreal Museum of Fine Arts" width "300" height "200">
+<img src "tea-bowl.jpg" alt "A white porcelain tea bowl exhibit in the Montreal Museum of Fine Arts">
     <p>To maintain consistent results, the following are recommendations given by the standard:</p>
 <ul>  
     <li>The pot should be white porcelain or glazed earthenware and have a partly serrated edge. It should have a lid that fits loosely inside the pot.</li>
