Dodaj formule in sklicevanje

--- a/03-html/stran.html
+++ b/03-html/stran.html
@@ -25,16 +25,16 @@ The abstract states the following:
 <ol>
     
         <li>
-            Details
+            <a href="#details"></a>Details
         </li>
         <li>
-            Pot and bowl
+            <a href="#pot and bowl"></a>Pot and bowl
         </li>
         <li>
-            Criticism
+            <a href="#criticism"></a>Criticism
         </li>
         <li>
-            Competing standards
+            <a href="#competing standards"></a>Competing standards
         </li>
         <li>See also</li>
         <li>References</li>
